--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ section {
   justify-content: center;
   align-items: center;
   position: relative;
-  z-index: 1; /* Ensure home content is above the video */
+  z-index: 1;
 }
 
 .home-img img {
@@ -120,7 +120,7 @@ span {
   width: 4rem;
   height: 4rem;
   background: transparent;
-  border: 0.2rem solid #ff7010 ;
+  border: 0.2rem solid #ff7010;
   border-radius: 50%;
   font-size: 2rem;
   color: #ff7010;
@@ -151,7 +151,6 @@ span {
   box-shadow: none;
 }
 
-/* CSS for the background video */
 .video-container {
   position: fixed;
   top: 0;
@@ -159,7 +158,7 @@ span {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  z-index: -1; /* Ensure the video is behind other content */
+  z-index: -1;
 }
 
 .video-container video {
@@ -168,8 +167,6 @@ span {
   left: 50%;
   width: 100%;
   height: 100%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  object-fit: cover; /* Ensure the video covers the entire container */
+  object-fit: cover;
 }
